# frontend3

./: .gitignore  deploy.yml  frontend3.cabal  sources.txt
deploy/: run.sh
snaplets/heist/templates/: api.tpl  base.tpl  index.tpl  languages.tpl  try.tpl
src/: Site.hs
src/handlers/: API.hs  Documentation.hs
static/: main.less
static/js/: api_docs.js  api_evaluate.js  global.js  try.js
