Name:                frontend3
Version:             0.1
Synopsis:            Haskell frontend rewrite for eval.so
Description:         This is the Haskell rewrite of the eval.so frontend. It provides the JSON API as well as documentation around it.
License:             BSD3
Author:              Ricky Elrod
Maintainer:          ricky@elrod.me
copyright:           (c) 2015 Ricky Elrod
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable frontend3
  hs-source-dirs: src, src/handlers
  main-is: Main.hs

  Build-depends:
    blaze-html,
    bytestring                >= 0.9.1   && < 0.11,
    containers                >= 0.5,
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-cors                 >  1.2.2   && < 2,
    snap-extras               >= 0.7,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9.0.2 && < 2,
    text                      >= 0.11,
    time                      >= 1.1     && < 1.5,
    transformers,
    xmlhtml                   >= 0.1,
    cruncher,
    cruncher-types

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.8

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
